--- a/03_julia.tex
+++ b/03_julia.tex
@@ -66,3 +66,5 @@ When writing code for numerical simulations, or any other code for that matter, 
 An option to reduce possible sources of errors is to benchmark the code multiple times and instead use the average time spent. However, then you have to write this extra code every time you want to benchmark a function. \emph{\cite{BenchmarkTools}} is a library that gives you a macro function called \texttt{@btime} that does exactly this so that you do not have to write repetitive code. It uses \texttt{@time} multiple times to get a result that is less prone to sources of errors. The primary macro function from Benchmarktools is however \texttt{@benchmark} which returns minimum, maximum, mean and average time, together with memory allocation and usage and information of number of samples it has taken. All this is easy to use because of Julia's metaprogramming and makes it quick to benchmark all types of simulations and codes safely and without repeating your source code.
 
 Subsection \ref{sec:profiling}, \ref{sec:debugger}, \ref{sec:benchmarking} are great examples of how powerful tools that help developers code are being created less than a year after v1.0 of Julia was released. This community, together with the ideas of a very fast language, makes Julia a very interesting language to try out and to see what is possible to achieve concerning easiness of code writing and execution performance.
+
+\todo[inline]{Ta med eksempler på syntaksforskjeller på matlab/Julia og C++}
