--- a/configurations/packages.sty
+++ b/configurations/packages.sty
@@ -74,7 +74,7 @@
 
 % ===== Linker ================ 
 \usepackage[colorlinks=true, pdfstartview=FitV, linkcolor=black, citecolor=black, urlcolor=blue]{hyperref} %pdfborder=000,pdftex=true
-%\renewcommand*{\equationautorefname}{equation}
+% \renewcommand*{\autorefname}{equation}
 \newcommand*{\myeqref}[2][Equation~]{%
   \hyperref[{#2}]{#1(\ref*{#2})}%
 }
