--- a/frontmatter/frontpage.tex
+++ b/frontmatter/frontpage.tex
@@ -13,7 +13,7 @@
 \parindent=0.0cm
 \parskip = 1.0ex
 \vspace*{1.5cm}
-\textsc{\Large Specialization Project in Mathematical Sciences}\\[0.5cm] % Major heading such as course name
+\textsc{\Large Master Thesis in Mathematical Sciences}\\[0.5cm] % Major heading such as course name
 %\textsc{\large Minor Heading}\\[0.5cm] % Minor heading such as course title
 
 %----------------------------------------------------------------------------------------
