--- a/main.tex
+++ b/main.tex
@@ -44,15 +44,15 @@
 \setcounter{page}{0}                                 %Resets the page counter to 0
 \pagenumbering{arabic}                               %Sets the page numbering to arabic numbers.
 
-% \input{01_introduction.tex}
-\input{02_julia.tex}
-\input{03_theory.tex}
+\input{01_introduction.tex}
+\input{02_theory.tex}
+\input{03_julia.tex}
 \input{04_implementation.tex}
 \input{05_flow_solver_with_AD.tex}
 \input{06_local_AD.tex}
-% \input{06_conclusion_and_future_work.tex}
+\input{07_conclusion_and_future_work.tex}
 
-\input{99_drafts.tex}
+% \input{99_drafts.tex}
 
 %End of Main Section
 %================================================================================================================
